<resources>
    <string name="app_name_alt">Music</string>
    <string name="applied">Launcher icon/name updated.</string>
    <string name="customize_title">Select Launcher Icon &amp; Name</string>
    <string name="launcher_note">Note: some launchers need to reload the drawer / restart for the changes to be visible.</string>
    <string name="new_icon">New Icon</string>
    <string name="old_icon">Old Icon</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="about_galaxy_music">About Galaxy Music</string>
    <string name="about_samsung_music">About Samsung Music</string>
    <string name="about_tos">SAMSUNG MUSIC TERMS OF SERVICE</string>
    <string name="about_tos_applicable_law">"12. Applicable Law
These TOS are governed by the laws of the jurisdiction where you are a resident, without regard to its conflict of law provisions. These TOS shall not be governed by the UN Convention on Contracts for the International Sale of Goods, the application of which is expressly excluded."</string>
    <string name="about_tos_compliance">"7. Compliance with Law
You acknowledge and agree to comply with any and all applicable laws and regulations in using the SERVICE including without limitation, all applicable export restriction laws and regulations."</string>
    <string name="about_tos_data_access">"6. Data Access
Some features of the SERVICE may require your mobile device to have access to the internet and may be subject to restrictions imposed by your network or internet provider. The SERVICE may require access through your mobile network, which may result in additional charges depending on your payment plan. In addition, your enjoyment of some features of the SERVICE may be affected by the suitability and performance of your device hardware or data access."</string>
    <string name="about_tos_disclaimer_of_warranty_1">"9. Disclaimer of Warranty
TO THE MAXIMUM EXTENT PERMITTED BY APPLICABLE LAW, THE SERVICE IS PROVIDED “AS IS” AND ON AN “AS AVAILABLE” BASIS, WITHOUT WARRANTIES OF ANY KIND FROM SAMSUNG, EITHER EXPRESS OR IMPLIED. TO THE MAXIMUM EXTENT PERMITTED BY APPLICABLE LAW,, SAMSUNG DISCLAIMS ALL WARRANTIES EXPRESSED, IMPLIED, OR STATUTORY, INCLUDING, BUT NOT LIMITED TO, IMPLIED WARRANTIES OF MERCHANTABILITY, SATISFACTORY QUALITY OR WORKMANLIKE EFFORT, FITNESS FOR A PARTICULAR PURPOSE, RELIABILITY OR AVAILABILITY, ACCURACY, LACK OF VIRUSES, QUIET ENJOYMENT, NON INFRINGEMENT OF THIRD PARTY RIGHTS OR OTHER VIOLATION OF RIGHTS."</string>
    <string name="about_tos_disclaimer_of_warranty_2">SOME JURISDICTIONS DO NOT ALLOW EXCLUSIONS OR LIMITATIONS OF IMPLIED WARRANTIES, SO THE ABOVE EXCLUSIONS OR LIMITATIONS MAY NOT APPLY TO YOU. NO ADVICE OR INFORMATION, WHETHER ORAL OR WRITTEN, OBTAINED BY YOU FROM SAMSUNG OR ITS AFFILIATES SHALL BE DEEMED TO ALTER THIS DISCLAIMER BY SAMSUNG OF WARRANTY REGARDING THE SERVICE, OR TO CREATE ANY WARRANTY OF ANY SORT FROM SAMSUNG. IN ADDITION, SAMSUNG AND ITS AFFILIATES DO NOT WARRANT, ENDORSE, GUARANTEE, OR ASSUME RESPONSIBILITY FOR THIRD PARTY SERVICES, ADVERTISEMENTS, CONTENT, OR ANY OTHER PRODUCT OR SERVICE ADVERTISED OR OFFERED BY A THIRD PARTY ON OR THROUGH THE SERVICE.</string>
    <string name="about_tos_dispute_resolution">"13. Dispute Resolution
If a dispute, controversy or difference arising in any way from these TOS or your use of the SERVICE is not amicably settled, it shall be subject arbitration proceedings under the arbitration rules of the International Chamber of Commerce in the place of the respondent. Notwithstanding the foregoing, Samsung may apply for injunctive remedies (or an equivalent type of urgent legal relief) in any court of competent jurisdiction."</string>
    <string name="about_tos_entire_agreement">"14. Entire Agreement
These TOS are the entire agreement between you and Samsung relating to the SERVICE and supersede all prior or contemporaneous oral or written communications, proposals and representations with respect to the SERVICE or any other subject matter covered by these TOS. If any provision of these TOS is held to be void, invalid, unenforceable or illegal, the other provisions shall continue in full force and effect."</string>
    <string name="about_tos_grant_of_license_1">"1. Grant of License
Subject to the terms of these TOS, you are granted a limited, non-exclusive, and revocable license to install, access and use the SERVICE. The services and features provided by the SERVICE or Update (defined below) thereto may vary or be limited depending on certain factors, including, without limitation, your country, device, operating system, or network operator. If you are 13 or older but under the age of 18, you represent that you have reviewed these TOS with your parent or legal guardian and that you and your parent or guardian understands and consents to the terms and conditions of these TOS."</string>
    <string name="about_tos_grant_of_license_2">If you are a parent or guardian permitting a person under the age of 18 (“Minor”) to use the SERVICE, you agree to: (i) supervise the Minor’s use of the SERVICE; (ii) assume all risks associated with the Minor’s use of the SERVICE, (iii) assume any liability resulting from the Minor’s use of the SERVICE; (iv) ensure the accuracy and truthfulness of all information submitted by the Minor; and (v) assume responsibility and are bound by this Agreement for the Minor’s access and use of the SERVICE.</string>
    <string name="about_tos_imporant_1">IMPORTANT – READ CAREFULLY. THESE TERMS OF SERVICE (“TOS”) ARE A LEGAL AGREEMENT BETWEEN YOU AND SAMSUNG ELECTRONICS CO., LTD. AND ITS AFFILIATES (COLLECTIVELY, “SAMSUNG”) FOR THE VIDEO AND ANY RELEVANT SOFTWARE OR DOCUMENTATION THEREOF (COLLECTIVELY, THE “SERVICE”) PROVIDED BY SAMSUNG OR ITS THIRD PARTY SUPPLIERS OR LICENSORS. BY AGREEING TO THESE TOS OR BY INSTALLING OR OTHERWISE USING THE SERVICE, YOU AGREE TO BE BOUND BY THESE TOS. IF YOU DO NOT AGREE TO THE TOS, THEN DO NOT INSTALL OR USE THE SERVICE.</string>
    <string name="about_tos_imporant_1_jpn">IMPORTANT – READ CAREFULLY. THESE TERMS OF SERVICE (“TOS”) ARE A LEGAL AGREEMENT BETWEEN YOU AND SAMSUNG ELECTRONICS CO., LTD. AND ITS AFFILIATES (COLLECTIVELY, “SAMSUNG”) FOR THE GALAXY MUSIC APPLICATION AND ANY RELEVANT SOFTWARE OR DOCUMENTATION THEREOF (COLLECTIVELY, THE “SERVICE”) PROVIDED BY SAMSUNG OR ITS THIRD PARTY SUPPLIERS OR LICENSORS. BY AGREEING TO THESE TOS OR BY INSTALLING OR OTHERWISE USING THE SERVICE, YOU AGREE TO BE BOUND BY THESE TOS. IF YOU DO NOT AGREE TO THESE TOS, THEN DO NOT INSTALL OR USE THE SERVICE.</string>
    <string name="about_tos_imporant_2">Samsung Music is a music player application that allows a seamless and easy playlist management. With Samsung Music, you can play your music according to various categories, such as genre, artist and etc.</string>
    <string name="about_tos_imporant_2_jpn">Galaxy Music is a music player application that allows a seamless and easy playlist management. With Galaxy Music, you can play your music according to various categories, such as genre, artist and etc.</string>
    <string name="about_tos_indemnification">"11. Indemnification
You agree to indemnify, defend, and hold harmless SAMSUNG, its contractors, employees, and agents from any claims, losses, damages, liabilities (including legal fees and expenses) arising out of your use of the SERVICE, your violation of the rights of any third party, or any breach of these TOS."</string>
    <string name="about_tos_jpn">GALAXY MUSIC TERMS OF SERVICE</string>
    <string name="auto_play_in_bg_title">Allow external devices to start playback</string>
    <string name="contact_us">Contact us</string>
    <string name="cross_fade">Crossfade between tracks</string>
    <string name="current_playlist_settings">Queue settings</string>
    <string name="device_management_setting">Manage devices</string>
    <string name="download_audio_quality">Downloading audio quality</string>
    <string name="download_manager">Download manager</string>
    <string name="drm_expired_test_menu">DRM 만료 테스트</string>
    <string name="duplicate_option">"Don't allow duplicate songs"</string>
    <string name="duplicate_option_summary">"Don't allow duplicates in queue"</string>
    <string name="general">General</string>
    <string name="hidden_menu_backup_db_files">Backup DB files</string>
    <string name="hidden_menu_backup_smart_switch">Backup SmartSwitch</string>
    <string name="hidden_menu_make_playlist_max">Make Playlist MAX</string>
    <string name="hidden_menu_make_playlist_max_with_favorite">Make Playlist MAX with Favorite</string>
    <string name="hidden_menu_restore_smart_switch">Restore SmartSwitch</string>
    <string name="hidden_menu_temp_test_playlist">Temp test Playlist</string>
    <string name="manage_cache_and_storage">Manage cache and storage</string>
    <string name="manage_tabs">Manage tabs</string>
    <string name="melon_settings">Melon settings</string>
    <string name="mobile_data">Connect using mobile data</string>
    <string name="music_core_player_service_notification_channel_name">Playback</string>
    <string name="no_network_connection">No network connection</string>
    <string name="play_speed">Play speed</string>
    <string name="playlists">Playlists</string>
    <string name="recommend_network_settings">Network settings</string>
    <string name="reset_device_registration_limit">기기등록 제한 초기화</string>
    <string name="screen_off_music">Music with screen off</string>
    <string name="screen_off_music_summary">Play music from the Lock screen when your headphones are connected and the screen is off.</string>
    <string name="setting_dark_mode">Dark mode</string>
    <string name="setting_dcf_download_folder">DCF Download Folder</string>
    <string name="setting_extend_dcf_period">Extend dcf period</string>
    <string name="setting_manage_playlists_menu">Manage Playlists</string>
    <string name="setting_permissions">Permissions</string>
    <string name="setting_privacy">Privacy</string>
    <string name="setting_use_melon">Use Melon</string>
    <string name="settings_lock_screen">Control music from Lock screen</string>
    <string name="skip_silences">Skip silence between tracks</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="spotify_no_network_kt">No network connection. Check your network settings and try again.</string>
    <string name="streaming_audio_quality">Streaming audio quality</string>
    <string name="streaming_video_quality">Streaming video quality</string>
    <string name="tts_go_to_music">Go to Music</string>
    <string name="tts_next">Next</string>
    <string name="tts_previous">Previous</string>
</resources>