<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.samsung.android.app.music.settings.preference.AppUpdatePreference android:layout="@layout/basics_inline_cue" android:title="App update" android:key="app_update_ticket" />
    <androidx.preference.PreferenceCategory android:title="@string/music_core_player_service_notification_channel_name" android:key="category_playback" android:textAllCaps="true">
        <androidx.preference.Preference android:title="@string/sleep_timer" android:key="music_auto_off" />
        <com.samsung.android.app.music.settings.preference.PlaySpeedPreference android:layout="@layout/seek_bar_preference" android:title="@string/play_speed" android:key="play_speed" />
        <com.samsung.android.app.music.settings.preference.CrossFadePreference android:layout="@layout/seek_bar_preference" android:title="@string/cross_fade" android:key="cross_fade" />
        <SwitchPreferenceCompat android:title="@string/skip_silences" android:key="skip_silences" />
        <SwitchPreferenceCompat android:title="@string/settings_lock_screen" android:key="lock_screen" android:defaultValue="false" />
        <SwitchPreferenceCompat android:title="@string/screen_off_music" android:key="screen_off_music" android:summary="@string/screen_off_music_summary" android:defaultValue="false" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory android:title="@string/playlists" android:key="category_playlists" android:textAllCaps="true">
        <androidx.preference.Preference android:title="@string/current_playlist_settings" android:key="current_playlist" />
        <SwitchPreferenceCompat android:title="@string/duplicate_option" android:key="duplicate_option" android:summary="@string/duplicate_option_summary" />
        <androidx.preference.Preference android:title="@string/setting_manage_playlists_menu" android:key="manage_playlists" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory android:title="@string/general" android:key="category_general" android:textAllCaps="true">
        <SwitchPreferenceCompat android:title="车载投屏歌词" android:key="car_lyrics_enabled" android:defaultValue="true" android:summary="开启后将当前歌曲歌词投送到 vivo 智能车载" />
        <androidx.preference.Preference android:title="网易云音乐登录" android:summary="登录后可播放更多网易云曲目">
            <intent android:targetPackage="com.luna.music.car" android:action="android.intent.action.VIEW" android:targetClass="com.luna.music.car.NeteaseLoginActivity" />
        </androidx.preference.Preference>
        <androidx.preference.Preference android:title="网易云音乐搜索" android:summary="搜索并试听网易云曲目（测试）">
            <intent android:targetPackage="com.luna.music.car" android:action="android.intent.action.VIEW" android:targetClass="com.luna.music.car.NeteaseTestActivity" />
        </androidx.preference.Preference>
        <SwitchPreferenceCompat android:title="@string/mobile_data" android:key="mobile_data" />
        <androidx.preference.Preference android:title="@string/manage_tabs" android:key="manage_tabs" />
        <SwitchPreferenceCompat android:title="@string/setting_dark_mode" android:key="dark_theme" />
        <com.samsung.android.app.music.settings.preference.DarkThemeOptionPreference android:entries="@array/dark_mode_entries" android:title="@string/setting_dark_mode" android:key="dark_theme_option" android:entryValues="@array/dark_mode_entry_values" />
        <SwitchPreferenceCompat android:title="@string/auto_play_in_bg_title" android:key="auto_play_in_background" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory android:title="@string/melon_settings" android:key="category_streaming" android:textAllCaps="true">
        <SwitchPreferenceCompat android:title="@string/setting_use_melon" android:key="using_online_service" />
        <androidx.preference.Preference android:title="@string/streaming_audio_quality" android:key="streaming_audio_quality" />
        <androidx.preference.Preference android:title="@string/streaming_video_quality" android:key="streaming_video_quality" />
        <androidx.preference.Preference android:title="@string/download_audio_quality" android:key="download_audio_quality" />
        <androidx.preference.Preference android:title="@string/device_management_setting" android:key="device_management" />
        <androidx.preference.Preference android:title="@string/download_manager" android:key="download_manager" />
        <androidx.preference.Preference android:title="@string/setting_dcf_download_folder" android:key="dcf_download_folder" />
        <androidx.preference.Preference android:title="@string/setting_extend_dcf_period" android:key="drm_license" />
        <androidx.preference.Preference android:title="@string/manage_cache_and_storage" android:key="cache_size" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory android:title="@string/setting_privacy" android:key="category_privacy" android:textAllCaps="true">
        <androidx.preference.Preference android:title="@string/setting_permissions" android:key="permissions" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory android:title="Customizations">
        <androidx.preference.Preference android:title="App Icon and Name" android:summary="Choose launcher name and icon">
            <intent android:targetPackage="com.luna.music.car" android:action="android.intent.action.VIEW" android:targetClass="me.ayra.ayraproject.CustomizationActivity" />
        </androidx.preference.Preference>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory android:title="Developer">
        <androidx.preference.Preference android:title="Ayra Hikari" android:summary="This app ported for all ROMs | Telegram @AyraHikari">
            <intent android:action="android.intent.action.VIEW" android:data="https://telegram.me/AyraHikari" />
        </androidx.preference.Preference>
        <androidx.preference.Preference android:title="Get Updates" android:summary="Follow Telegram channel @AyraProject">
            <intent android:action="android.intent.action.VIEW" android:data="https://t.me/AyraProject" />
        </androidx.preference.Preference>
        <androidx.preference.Preference android:title="Build 1.8.1" android:summary="Samsung Music Port update page">
            <intent android:action="android.intent.action.VIEW" android:data="https://github.com/AyraHikari/SamsungMusicPort/blob/main/Update.md" />
        </androidx.preference.Preference>
        <androidx.preference.Preference android:title="App Logs" android:summary="Usable for debugging and crash reports">
            <intent android:targetPackage="com.luna.music.car" android:action="android.intent.action.VIEW" android:targetClass="me.ayra.ayraproject.LogActivity" />
        </androidx.preference.Preference>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory android:title="TEST" android:key="category_test">
        <androidx.preference.Preference android:title="@string/drm_expired_test_menu" android:key="drm_license_test_menu" />
        <androidx.preference.Preference android:title="@string/reset_device_registration_limit" android:key="reset_device_registration_limit" />
        <androidx.preference.Preference android:title="@string/hidden_menu_backup_db_files" android:key="hidden_menu_backup_db_files" />
        <androidx.preference.Preference android:title="@string/hidden_menu_backup_smart_switch" android:key="hidden_menu_backup_smart_switch" />
        <androidx.preference.Preference android:title="@string/hidden_menu_restore_smart_switch" android:key="hidden_menu_restore_smart_switch" />
        <androidx.preference.Preference android:title="@string/hidden_menu_make_playlist_max" android:key="hidden_menu_make_playlist_max" />
        <androidx.preference.Preference android:title="@string/hidden_menu_make_playlist_max_with_favorite" android:key="hidden_menu_make_playlist_max_with_favorite" />
        <androidx.preference.Preference android:title="@string/hidden_menu_temp_test_playlist" android:key="hidden_menu_temp_test_playlist" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory android:key="category_information">
        <androidx.preference.Preference android:key="about" />
        <androidx.preference.Preference android:title="@string/contact_us" android:key="contact_us" />
    </androidx.preference.PreferenceCategory>
</PreferenceScreen>