<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/basics_system_background_209_4_1" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guideline_start" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.125" />
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guideline_end" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.875" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/guideline_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_end="@dimen/mu_no_item_sub_text_margin_bottom" />
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guideline_start_network" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_begin="45.5dip" />
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guideline_end_network" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_end="45.5dip" />
    <com.samsung.android.app.musiclibrary.ui.widget.OneUiTextView android:textSize="@dimen/mu_no_item_main_text" android:textColor="@color/basics_no_item_text_209_11_1" android:gravity="center" android:id="@id/no_network_title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/no_network_connection" app:layout_constraintBottom_toTopOf="@id/no_network_desc" app:layout_constraintEnd_toStartOf="@id/guideline_end" app:layout_constraintStart_toEndOf="@id/guideline_start" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_chainStyle="packed" style="@style/Font.NewSECRegular" />
    <TextView android:textSize="@dimen/mu_no_item_sub_text" android:textColor="@color/basics_no_item_sub_text_209_11_2" android:gravity="center" android:id="@id/no_network_desc" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/mu_no_item_title_margin" android:text="@string/spotify_no_network_kt" android:lineSpacingExtra="@dimen/no_network_text_line_spacing" app:layout_constraintBottom_toTopOf="@id/no_network_settings" app:layout_constraintEnd_toStartOf="@id/guideline_end" app:layout_constraintStart_toEndOf="@id/guideline_start" app:layout_constraintTop_toBottomOf="@id/no_network_title" app:layout_goneMarginTop="0.0dip" style="@style/Font.NewSECRegular" />
    <TextView android:textSize="@dimen/heart_recommend_no_network_button_text" android:textColor="@color/basics_text_main" android:ellipsize="end" android:gravity="center" android:id="@id/no_network_settings" android:background="@drawable/heart_no_item_button" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/heart_recommend_no_network_settings_space_top" android:minWidth="@dimen/heart_recommend_no_network_button_min_width" android:minHeight="@dimen/heart_recommend_no_network_button_min_height" android:text="@string/recommend_network_settings" android:maxLines="1" android:singleLine="true" android:stateListAnimator="?seslSmallTouchAnimator" android:paddingHorizontal="16.0dip" android:paddingVertical="14.0dip" app:layout_constrainedHeight="true" app:layout_constrainedWidth="true" app:layout_constraintBottom_toBottomOf="@id/guideline_bottom" app:layout_constraintEnd_toStartOf="@id/guideline_end_network" app:layout_constraintStart_toEndOf="@id/guideline_start_network" app:layout_constraintTop_toBottomOf="@id/no_network_desc" style="@style/Font.NewSEC.600" />
</androidx.constraintlayout.widget.ConstraintLayout>