<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/widget_background" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/widget_background_default" android:alpha="0.0" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingStart="10.0dip" android:paddingEnd="10.0dip">
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="0.47">
            <LinearLayout android:orientation="vertical" android:id="@id/album_root" android:layout_width="wrap_content" android:layout_height="fill_parent">
                <TextView android:id="@id/album_top_space" android:layout_width="1.0dip" android:layout_height="0.0dip" android:layout_weight="0.15" />
                <ImageView android:gravity="bottom" android:id="@id/album_art" android:layout_width="wrap_content" android:layout_height="0.0dip" android:src="@drawable/widget_land_album_cover_default" android:scaleType="fitXY" android:adjustViewBounds="true" android:layout_weight="0.7" android:contentDescription="@string/tts_go_to_music" />
                <TextView android:id="@id/album_bottom_space" android:layout_width="1.0dip" android:layout_height="0.0dip" android:layout_weight="0.15" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/content_container" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip">
                <LinearLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:id="@id/text_adult" android:layout_marginEnd="@dimen/app_widget_adult_icon_padding_end" style="@style/ListItem.Status.Adult" />
                    <TextView android:textSize="15.0dip" android:id="@id/title" style="@style/AppWidget.Title.Shadow" />
                </LinearLayout>
                <TextView android:textSize="13.0dip" android:id="@id/artist" style="@style/AppWidget.Artist.Shadow" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="0.53" android:layoutDirection="ltr">
            <ImageButton android:id="@id/shuffle_btn" android:layout_width="24.0dip" android:layout_height="24.0dip" android:src="@drawable/app_widget_multi_foldable_ic_shuffle_on_dark_shadow" android:layout_marginStart="9.5dip" style="@style/AppWidget.ImageButton.Small" />
            <TextView android:id="@id/button_space_1" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
            <ImageButton android:id="@id/prev_btn" android:layout_width="24.0dip" android:layout_height="24.0dip" android:src="@drawable/app_widget_multi_foldable_ic_back_dark_shadow" android:contentDescription="@string/tts_previous" style="@style/AppWidget.ImageButton" />
            <TextView android:id="@id/button_space_2" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
            <ImageButton android:id="@id/play_pause_btn" android:layout_width="24.0dip" android:layout_height="24.0dip" android:src="@drawable/app_widget_multi_foldable_ic_play_dark_shadow" style="@style/AppWidget.ImageButton" />
            <TextView android:id="@id/button_space_3" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
            <ImageButton android:id="@id/next_btn" android:layout_width="24.0dip" android:layout_height="24.0dip" android:src="@drawable/app_widget_multi_foldable_ic_forward_dark_shadow" android:contentDescription="@string/tts_next" style="@style/AppWidget.ImageButton" />
            <TextView android:id="@id/button_space_4" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
            <ImageButton android:id="@id/repeat_btn" android:layout_width="24.0dip" android:layout_height="24.0dip" android:src="@drawable/app_widget_multi_foldable_ic_repeat_off_dark_shadow" style="@style/AppWidget.ImageButton.Small" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>